fix: highlighted code wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
 body {
     @apply bg-zinc-900 text-zinc-200;
 }
+
+pre code {
+    @apply whitespace-pre-wrap;
+}
